Articles: fixes spacing issue with <pre> nested in <li>

--- a/components/article/assets/styles/article.scss
+++ b/components/article/assets/styles/article.scss
@@ -145,6 +145,12 @@
       color: $color-brand;
     }
 
+    li {
+      pre {
+        @include rem(margin-top, 32px);
+      }
+    }
+
   }
 
   &__more {
